--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.todo{
+.todo {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -20,10 +20,13 @@ body {
   box-shadow: 1px 2px 20px #f3f3f3;
   border-radius: 10px;
   border: 1px solid #f1f1f1;
-  &__sidebar{
+  font-size: 14px;
+
+  &__sidebar {
     background-color: #f4f6f8;
     width: 200px;
-    height: inherit;
+    height: 100%;
     border-right: 1px solid #f1f1f1;
+    padding: 60px 20px
   }
 }
