fix: sidebar list design

--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,11 +1,11 @@
 .todo {
   &__list {
+    margin-bottom: 30px;
     li {
       display: flex;
       align-items: center;
       cursor: pointer;
       padding: 10px 12px;
-      margin-bottom: 5px;
 
       &.active {
         background-color: #ffffff;
@@ -15,13 +15,22 @@
 
       i {
         display: inline-flex;
-        margin-right: 10px;
+        margin-right: 8px;
 
         svg {
           path {
             fill: #7c7c7c;
           }
         }
+      }
+
+      .badge {
+        width: 10px;
+        height: 10px;
+        border-radius: 30px;
+        position: relative;
+        left: 3px;
+        bottom: 1px;
       }
     }
   }
