--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,9 @@
   list-style: none;
   outline: none;
   font-family: 'Roboto', -apple-system, system-ui, sans-serif;
+  box-sizing: border-box;
 }
-body {  
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -24,9 +25,9 @@ body {
 
   &__sidebar {
     background-color: #f4f6f8;
-    width: 200px;
+    width: 230px;
     height: 100%;
     border-right: 1px solid #f1f1f1;
-    padding: 60px 20px
+    padding: 60px 20px;
   }
 }
