--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ body {
   border-radius: 10px;
   border: 1px solid #f1f1f1;
   font-size: 14px;
+  overflow: hidden;
 
   &__sidebar {
     background-color: #f4f6f8;
